--- a/src/main/webapp/templates-hidden/wizard-all.html
+++ b/src/main/webapp/templates-hidden/wizard-all.html
@@ -1,23 +1,33 @@
-<div>
-  <wizard:screen_info><div>Page <wizard:screen_number/> of <wizard:total_screens/></div></wizard:screen_info>
-  <wizard:wizard_top> <div> <wizard:bind/> </div> </wizard:wizard_top>
-  <wizard:screen_top> <div> <wizard:bind/> </div> </wizard:screen_top>
-  <wizard:errors> <div> <ul> <wizard:item> <li> <wizard:bind/> </li> </wizard:item> </ul> </div> </wizard:errors>
-  <div> <wizard:fields>
-      <table>
-        <wizard:line>
-          <tr>
-            <td>
-              <wizard:label><label wizard:for=""><wizard:bind/></label></wizard:label>
-	      <wizard:help><span><wizard:bind/></span></wizard:help>
-	      <wizard:field_errors> <ul> <wizard:error> <li> <wizard:bind/> </li> </wizard:error> </ul> </wizard:field_errors>
-          </td>
-          <td> <wizard:form/> </td>
-          </tr>
-        </wizard:line>
-      </table>
-    </wizard:fields> </div>
-  <div> <table> <tr> <td> <wizard:prev/> </td> <td> <wizard:cancel/> </td> <td> <wizard:next/> </td> </tr> </table> </div>
-  <wizard:screen_bottom> <div> <wizard:bind/> </div> </wizard:screen_bottom>
-  <wizard:wizard_bottom> <div> <wizard:bind/> </div> </wizard:wizard_bottom>
+<div class="form-horizontal">
+    <wizard:screen_info><div>Page <wizard:screen_number/> of <wizard:total_screens/></div></wizard:screen_info>
+    <wizard:wizard_top> <div> <wizard:bind/> </div> </wizard:wizard_top>
+    <wizard:screen_top> <div> <wizard:bind/> </div> </wizard:screen_top>
+    <!-- <wizard:errors> <div> <ul> <wizard:item> <li> <wizard:bind/> </li> </wizard:item> </ul> </div> </wizard:errors> -->
+    <fieldset>
+        <wizard:fields>
+            <div class="control-group" lift:bind="wizard:line">
+                <wizard:label><label class="control-label" wizard:for=""><wizard:bind></wizard:bind></label></wizard:label>
+                <div class="controls">
+                    <wizard:form></wizard:form>
+                    <wizard:help><span class="help-inline"><wizard:bind></wizard:bind></span></wizard:help>
+          <span class="alert-block">
+            <wizard:field_errors>
+                <ul>
+                    <wizard:error>
+                        <li class="error"><wizard:bind></wizard:bind></li>
+                    </wizard:error>
+                </ul>
+            </wizard:field_errors>
+          </span>
+                </div>
+            </div>
+        </wizard:fields>
+    </fieldset>
+    <div class="form-actions">
+        <wizard:prev></wizard:prev>
+        <wizard:next></wizard:next>
+        <wizard:cancel></wizard:cancel>
+    </div>
+    <wizard:screen_bottom><div><wizard:bind></wizard:bind></div></wizard:screen_bottom>
+    <wizard:wizard_bottom><div><wizard:bind></wizard:bind></div></wizard:wizard_bottom>
 </div>
