added submenus to add and list authors

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,10 +3,10 @@
   <head><meta content="text/html; charset=UTF-8" http-equiv="content-type" /><title>Home</title></head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
-      <h2>Welcome to your project!</h2>
+      <h2>Welcome to your Bookstore!</h2>
       <p>
 	<span class="lift:helloWorld.howdy">
-	  Welcome to your Lift app at <span id="time">Time goes here</span>
+	  Welcome to your Bookstore application app at <span id="time">Time goes here</span>
 	</span>
       </p>
     </div>
