Working on functionality to add books

--- a/src/main/webapp/squeryl/list_authors.html
+++ b/src/main/webapp/squeryl/list_authors.html
@@ -6,13 +6,13 @@
         </li>
     </ul-->
 
-    <table>
+    <table class="newtable">
         <tr>
             <th>Name</th>
             <th>Age</th>
             <th>Birthday</th>
         </tr>
-        <tr data-lift="Authors.list">
+        <tr class="newtable" data-lift="Authors.list">
             <td><span class="name">Name</span></td>
             <td><span class="age">Age</span></td>
             <td><span class="bday">Birthday</span></td>
