--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -64,7 +64,13 @@
         font-style: italic;
         font-weight: normal;
         }
-
+.newtable {
+        border-collapse:collapse;
+        border:1px solid green;
+        }
+newtable tr:nth-child(even) td{
+        background-color: lightgray;
+        }
   /* ]]> */
   </style>
   </head>
